# cpp-double-pendulum

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.hpp  doublePendulum.cpp  doublePendulum.hpp  image.cpp  image.hpp  initialConditions.hpp  main.cpp  pendulum.hpp
include/: image.hpp  pendulumParams.hpp
src/: image.cpp  pendulum.cpp
